--- a/ui/optionsdialog.ui
+++ b/ui/optionsdialog.ui
@@ -76,7 +76,7 @@
         <attribute name="title" >
          <string>Fonts and colors</string>
         </attribute>
-        <widget class="QWidget" name="" >
+        <widget class="QWidget" name="layoutWidget" >
          <property name="geometry" >
           <rect>
            <x>10</x>
@@ -388,13 +388,13 @@
         <attribute name="title" >
          <string>Misc</string>
         </attribute>
-        <widget class="QWidget" name="layoutWidget" >
+        <widget class="QWidget" name="" >
          <property name="geometry" >
           <rect>
            <x>10</x>
-           <y>10</y>
-           <width>411</width>
-           <height>211</height>
+           <y>18</y>
+           <width>198</width>
+           <height>221</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" >
@@ -411,6 +411,39 @@
              <string>Load last document on startup</string>
             </property>
            </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" >
+            <item>
+             <spacer>
+              <property name="orientation" >
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType" >
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" >
+               <size>
+                <width>30</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="saveCursorCheckBox" >
+              <property name="whatsThis" >
+               <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Flow Mode disables deletions from backspace, delete key and cuttings. This is done to help you focus on writing, instead of correcting minor typos. Typos and other editing can be done in a later stage.&lt;/p>&lt;/body>&lt;/html></string>
+              </property>
+              <property name="text" >
+               <string>Restore cursor position</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
           <item>
            <widget class="QCheckBox" name="splashScreenCheckBox" >
@@ -553,8 +586,8 @@ p, li { white-space: pre-wrap; }
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>448</x>
-     <y>300</y>
+     <x>531</x>
+     <y>339</y>
     </hint>
     <hint type="destinationlabel" >
      <x>249</x>
@@ -569,12 +602,28 @@ p, li { white-space: pre-wrap; }
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>298</x>
-     <y>300</y>
+     <x>361</x>
+     <y>339</y>
     </hint>
     <hint type="destinationlabel" >
      <x>249</x>
      <y>159</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>loadOnStartCheckBox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>saveCursorCheckBox</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>254</x>
+     <y>111</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>269</x>
+     <y>145</y>
     </hint>
    </hints>
   </connection>
