--- a/ui/optionsdialog.ui
+++ b/ui/optionsdialog.ui
@@ -76,13 +76,13 @@
         <attribute name="title" >
          <string>Fonts and colors</string>
         </attribute>
-        <widget class="QWidget" name="layoutWidget" >
+        <widget class="QWidget" name="" >
          <property name="geometry" >
           <rect>
            <x>10</x>
-           <y>11</y>
+           <y>12</y>
            <width>415</width>
-           <height>168</height>
+           <height>224</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" >
@@ -192,7 +192,7 @@
           <item>
            <widget class="QLabel" name="statusbarFontLabel" >
             <property name="text" >
-             <string>Statusbar font:</string>
+             <string>Statistics font:</string>
             </property>
            </widget>
           </item>
@@ -299,7 +299,7 @@
             </property>
             <property name="sizeHint" >
              <size>
-              <width>111</width>
+              <width>413</width>
               <height>20</height>
              </size>
             </property>
@@ -375,7 +375,112 @@
             <item>
              <widget class="QLabel" name="label" >
               <property name="text" >
-               <string>Editor background color</string>
+               <string>Editor background</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <spacer>
+            <property name="orientation" >
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeType" >
+             <enum>QSizePolicy::Fixed</enum>
+            </property>
+            <property name="sizeHint" >
+             <size>
+              <width>413</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" >
+            <item>
+             <widget class="QPushButton" name="pbScrollBarColor" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize" >
+               <size>
+                <width>24</width>
+                <height>24</height>
+               </size>
+              </property>
+              <property name="maximumSize" >
+               <size>
+                <width>24</width>
+                <height>24</height>
+               </size>
+              </property>
+              <property name="palette" >
+               <palette>
+                <active>
+                 <colorrole role="Button" >
+                  <brush brushstyle="SolidPattern" >
+                   <color alpha="255" >
+                    <red>20</red>
+                    <green>20</green>
+                    <blue>20</blue>
+                   </color>
+                  </brush>
+                 </colorrole>
+                </active>
+                <inactive>
+                 <colorrole role="Button" >
+                  <brush brushstyle="SolidPattern" >
+                   <color alpha="255" >
+                    <red>20</red>
+                    <green>20</green>
+                    <blue>20</blue>
+                   </color>
+                  </brush>
+                 </colorrole>
+                </inactive>
+                <disabled>
+                 <colorrole role="Button" >
+                  <brush brushstyle="SolidPattern" >
+                   <color alpha="255" >
+                    <red>20</red>
+                    <green>20</green>
+                    <blue>20</blue>
+                   </color>
+                  </brush>
+                 </colorrole>
+                </disabled>
+               </palette>
+              </property>
+              <property name="toolTip" >
+               <string>Progress slider buttons color</string>
+              </property>
+              <property name="text" >
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="scrollBarColorLabel" >
+              <property name="enabled" >
+               <bool>true</bool>
+              </property>
+              <property name="text" >
+               <string>Progress slider buttons color</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="scrollBarCheckBox" >
+              <property name="text" >
+               <string>enable progress slider</string>
+              </property>
+              <property name="checked" >
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -388,7 +493,7 @@
         <attribute name="title" >
          <string>Misc</string>
         </attribute>
-        <widget class="QWidget" name="" >
+        <widget class="QWidget" name="layoutWidget" >
          <property name="geometry" >
           <rect>
            <x>10</x>
@@ -586,7 +691,7 @@ p, li { white-space: pre-wrap; }
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>531</x>
+     <x>527</x>
      <y>339</y>
     </hint>
     <hint type="destinationlabel" >
@@ -602,7 +707,7 @@ p, li { white-space: pre-wrap; }
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>361</x>
+     <x>357</x>
      <y>339</y>
     </hint>
     <hint type="destinationlabel" >
@@ -618,12 +723,12 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>254</x>
-     <y>111</y>
+     <x>301</x>
+     <y>118</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>269</x>
-     <y>145</y>
+     <x>340</x>
+     <y>156</y>
     </hint>
    </hints>
   </connection>
