--- a/ui/textroom.ui
+++ b/ui/textroom.ui
@@ -559,7 +559,7 @@ p, li { white-space: pre-wrap; }
         <font/>
        </property>
        <property name="layoutDirection" >
-        <enum>Qt::RightToLeft</enum>
+        <enum>Qt::LeftToRight</enum>
        </property>
        <property name="autoFillBackground" >
         <bool>true</bool>
