--- a/src/ui/optionsdialog.ui
+++ b/src/ui/optionsdialog.ui
@@ -588,7 +588,7 @@ p, li { white-space: pre-wrap; }
        <property name="geometry">
         <rect>
          <x>350</x>
-         <y>360</y>
+         <y>400</y>
          <width>201</width>
          <height>27</height>
         </rect>
@@ -596,6 +596,45 @@ p, li { white-space: pre-wrap; }
        <property name="text">
         <string>Restore Everything to Defaults</string>
        </property>
+      </widget>
+      <widget class="QWidget" name="horizontalLayoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>250</x>
+         <y>330</y>
+         <width>266</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="label_13">
+          <property name="text">
+           <string>Document Language:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="languageComboBox">
+          <property name="minimumSize">
+           <size>
+            <width>120</width>
+            <height>0</height>
+           </size>
+          </property>
+          <item>
+           <property name="text">
+            <string>US English</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Türkçe</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
      <widget class="QWidget" name="tab">
