--- a/src/ui/about.ui
+++ b/src/ui/about.ui
@@ -52,8 +52,8 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>342</width>
-     <height>342</height>
+     <width>340</width>
+     <height>340</height>
     </rect>
    </property>
    <property name="autoFillBackground">
@@ -63,7 +63,7 @@ p, li { white-space: pre-wrap; }
     <string>background-image: url(:/images/textroom-about.png);</string>
    </property>
    <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
+    <enum>QFrame::NoFrame</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
